azure/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lms-api-svc
  namespace: lms
  labels:
    app: lms-api
spec:
  type: LoadBalancer
  selector:
    app: lms-api
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
